@@ -37,6 +37,7 @@
 
 #include "common.h"
 #include "SharedHandle.h"
+#include "TimeA2.h"
 #include <utility>
 #include <string>
 
@@ -74,6 +75,7 @@ public:
   void sendPass() const;
   void sendType() const;
   void sendCwd() const;
+  void sendMdtm() const;
   void sendSize() const;
   void sendPasv() const;
   SharedHandle<SocketCore> sendPort() const;
@@ -82,6 +84,13 @@ public:
 
   unsigned int receiveResponse();
   unsigned int receiveSizeResponse(uint64_t& size);
+  // Returns status code of MDTM reply. If the status code is 213, parses
+  // time-val and store it in time.
+  // If a code other than 213 is returned, time is not touched.
+  // Expect MDTM reply is YYYYMMDDhhmmss in GMT. If status is 213 but returned
+  // date cannot be parsed, then executes time.setTimeInSec(-1).
+  // If reply is not received yet, returns 0.
+  unsigned int receiveMdtmResponse(Time& time);
   unsigned int receivePasvResponse(std::pair<std::string, uint16_t>& dest);
 };
 
